# FT_KMeans

./: CMakeLists.txt  readme.md
codegen/: auto_codegen.py  auto_codegen_double.py  cutlass_codegen_double.py  output.txt  output1.txt
figure/data/: cublas_fp32_fixK.csv  cublas_fp32_fixN.csv  cublas_fp64_fixK.csv  cublas_fp64_fixN.csv  jack_fp32_fixK_ft.csv  jack_fp32_fixN_ft.csv  jack_fp64_fixK_ft.csv  jack_fp64_fixN_ft.csv  test_kmeans_fp32_err.csv  test_kmeans_fp32_fixK.csv  test_kmeans_fp32_fixK_err.csv  test_kmeans_fp32_fixK_ft.csv  test_kmeans_fp32_fixN.csv  test_kmeans_fp32_fixN_err.csv  test_kmeans_fp32_fixN_ft.csv  test_kmeans_fp32_ft.csv  test_kmeans_fp64_fixK.csv  test_kmeans_fp64_fixK_err.csv  test_kmeans_fp64_fixK_ft.csv  test_kmeans_fp64_fixN.csv  test_kmeans_fp64_fixN_err.csv  test_kmeans_fp64_fixN_ft.csv
include/: helper.h
include/cutlass/: device_kernel.h  version.h
include/cutlass/arch/: mma_sm80.h
include/cutlass/gemm/device/: base_grouped.h
include/cutlass/gemm/kernel/: gemm.h  gemm_grouped.h  gemm_universal.h
include/cutlass/gemm/warp/: mma_simt.h  mma_tensor_op.h  mma_tensor_op_fast_f32.h  mma_tensor_op_wmma.h
src/: cutlassgemm.cu  header.cuh  main.cu  main_double.cu  test_cublas.cu  test_cutlass.cu  test_cutlass_double.cu  test_cutlass_tuned.cu  test_cutlass_tuner.cu  test_cutlass_tuner_double.cu  test_fp64_tensorop.cu  test_kmeans_tuner_fp32_fixK.cu  test_kmeans_tuner_fp32_fixN.cu  test_kmeans_tuner_fp64_fixK.cu  test_kmeans_tuner_fp64_fixN.cu  test_tf32_tensorop.cu
src/fused_distance_nn/: cutlass_base.cuh  cutlass_base_customized copy.cuh  cutlass_base_customized.cuh  epilogue.cuh  epilogue_elementwise.cuh  gemm.h  gemm_customized copy.h  gemm_customized.h  l2_exp.cuh  persistent_gemm.h  predicated_tile_iterator_normvec_smem.h  predicated_tile_iterator_reduced_vec.h
